// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C# metric tests > parsing C# dependencies > should calculate the right dependencies and coupling metrics 1`] = `
{
  "metrics": Map {
    "BlubController.cs" => {
      "coupling_between_objects": 8,
      "incoming_dependencies": 7,
      "instability": 0.125,
      "outgoing_dependencies": 1,
    },
    "Library\\FunctionCalls.cs" => {
      "coupling_between_objects": 6,
      "incoming_dependencies": 2,
      "instability": 0.6666666666666666,
      "outgoing_dependencies": 4,
    },
    "Library\\IAnotherParameterTypes.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Library\\IParameterTypes.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "Library\\MyCustomArgumentNullException.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Library\\ObjectCreations.cs" => {
      "coupling_between_objects": 8,
      "incoming_dependencies": 1,
      "instability": 0.875,
      "outgoing_dependencies": 7,
    },
    "Library\\ParameterTypes.cs" => {
      "coupling_between_objects": 5,
      "incoming_dependencies": 3,
      "instability": 0.4,
      "outgoing_dependencies": 2,
    },
    "Library\\ParameterTypesSpecialized.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "ParameterTypes",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "fromSource": "Library\\ParameterTypes.cs",
      "toClassName": "FunctionCalls",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toSource": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerOne1",
      "fromNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "fromSource": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toSource": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "IParameterTypes",
      "fromNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "fromSource": "Library\\IParameterTypes.cs",
      "toClassName": "IAnotherParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.IAnotherParameterTypes",
      "toSource": "Library\\IAnotherParameterTypes.cs",
      "usageType": "implements",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "IParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "toSource": "Library\\IParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypesSpecialized",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypesSpecialized",
      "fromSource": "Library\\ParameterTypesSpecialized.cs",
      "toClassName": "IParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "toSource": "Library\\IParameterTypes.cs",
      "usageType": "implements",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "MyCustomArgumentNullException",
      "toNamespace": "App.CouplingExamples.Library.MyCustomArgumentNullException",
      "toSource": "Library\\MyCustomArgumentNullException.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypes",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "fromSource": "Library\\ParameterTypes.cs",
      "toClassName": "ObjectCreations",
      "toNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toSource": "Library\\ObjectCreations.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "fromSource": "Library\\FunctionCalls.cs",
      "toClassName": "ParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "toSource": "Library\\ParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "ParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "toSource": "Library\\ParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypesSpecialized",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypesSpecialized",
      "fromSource": "Library\\ParameterTypesSpecialized.cs",
      "toClassName": "ParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "toSource": "Library\\ParameterTypes.cs",
      "usageType": "extends",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "fromSource": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerOne1",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerOne1",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "fromSource": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerOne2",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne2",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerOne2",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne2",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "fromSource": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerTwo1",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerTwo1",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerTwo2",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo2",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies > should calculate the right dependencies and coupling metrics for extended class 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "ClassA",
      "toNamespace": "NamespaceA.ClassA",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromNamespace": "NamespaceA.ClassA",
      "fromSource": "ClassA.cs",
      "toClassName": "ClassB",
      "toNamespace": "NamespaceB.ClassB",
      "toSource": "ClassB.cs",
      "usageType": "extends",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies > should calculate the right dependencies and coupling metrics for static using 1`] = `
{
  "metrics": Map {
    "ClassA_And_B.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 4,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 4,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "ClassB",
      "toNamespace": "NormalUsedNamespace.ClassB",
      "toSource": "ClassA_And_B.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "ClassC",
      "toNamespace": "NormalUsedNamespace.ClassC",
      "toSource": "ClassA_And_B.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "ClassA",
      "toNamespace": "StaticUsedNamespace.ClassA",
      "toSource": "ClassA_And_B.cs",
      "usageType": "usage",
    }
  ],
}
`;
